--- a/genart/.settings/org.eclipse.buildship.core.prefs
+++ b/genart/.settings/org.eclipse.buildship.core.prefs
@@ -5,7 +5,7 @@ connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=/nix/store/98nqgi1p94bb5819xkc6lbjm29y0s4rd-adoptopenjdk-hotspot-bin-17.0.2
+java.home=/nix/store/2ym89d43w4dpxxb1g6yx9l6929qd7vdx-openjdk-19.0.1+10/lib/openjdk
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
